manifests/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: dns
      port: 53
      protocol: TCP
      targetPort: 53
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Local
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: client-udp
      port: 67
      protocol: UDP
      targetPort: 67
  selector:
    app: pihole
