manifests/pihole/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole
spec:
  rules:
    - host: pi.hole
      http:
        paths:
          - path: /
            backend:
              serviceName: pihole-tcp
              servicePort: 80
